--- a/package.json
+++ b/package.json
@@ -74,7 +74,9 @@
     "server-base": "^7.1.32",
     "server-base-router": "^7.1.32",
     "take-five": "^2.0.0",
-    "x-xss-protection": "^2.0.0"
+    "x-xss-protection": "^2.0.0",
+    "@web-widget/web-router": "1.10.24",
+    "@web-widget/node": "1.10.24"
   },
   "devDependencies": {
     "snazzy": "^9.0.0",
